PartyPalace/force-app/main/default/objects/Store_Inventory__c/fields/Order_New_Stock__c.field-meta.xml
<CustomField>
    <fullName>Order_New_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order New Stock</label>
    <type>Checkbox</type>
</CustomField>