PartyPalace/force-app/main/default/objects/Store_Inventory__c/fields/Store_Location__c.field-meta.xml
<CustomField>
    <fullName>Store_Location__c</fullName>
    <label>Store Location</label>
    <referenceTo>Store_Location__c</referenceTo>
    <relationshipLabel>Store Inventories</relationshipLabel>
    <relationshipName>Store_Inventories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>