PartyPalace/force-app/main/default/objects/Store_Inventory__c/fields/Store_Product__c.field-meta.xml
<CustomField>
    <fullName>Store_Product__c</fullName>
    <label>Store Product</label>
    <referenceTo>Store_Product__c</referenceTo>
    <relationshipLabel>Store Inventories</relationshipLabel>
    <relationshipName>Store_Inventories</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>